--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-        cache-dependency-path: '**/yarn.lock'
-
+        cache-dependency-path:  ./node-app/yarn.lock
+        
     - name: Install dependencies
       run: |
         git clone git@github.com:threefoldtech/grid_weblets.git
