--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
-        cache-dependency-path: '**/yarn.lock'
-        
+#- name: Setup Node.js ${{ matrix.node-version }}
+#      uses: actions/setup-node@v2
+#      with:
+#        node-version: ${{ matrix.node-version }}
+#        cache: 'yarn'
+#        cache-dependency-path: '**/yarn.lock'
+
+    - name: Install yarn
+      run: npm install -g yarn
+
+    - name: Install project dependencies
+      if: steps.yarn-cache.outputs.cache-hit != 'true' # Over here!
+      run: yarn
+
+
+    
     - name: Install dependencies
       run: |
         git clone git@github.com:threefoldtech/grid_weblets.git
