--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         cd .. && yarn build:app
         pwd
         ls 
-        cp docs/build/elements/farmingcalculator.wc.js ../www_simulator/src/
+        #cp docs/build/elements/farmingcalculator.wc.js ../www_simulator/src/
         
 
 
@@ -58,5 +58,5 @@ jobs:
         key: ${{ secrets.PROD_SSH_KEY }}
         passphrase: ${{ secrets.PROD_SSH_KEY_PASSPHRASE }}
         rm: true
-        source: "/src"
+        source: "docs/build/elements/farmingcalculator.wc.js"
         target: "${{ secrets.PROD_OVH_DIR }}"
