--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-        cache-dependency-path: '**/yarn.lock'
+       # cache-dependency-path: '**/yarn.lock'
 
  #   - name: Install yarn
  #     run: npm install -g yarn
